fixed extra spaces

--- a/components/about/index.module.scss
+++ b/components/about/index.module.scss
@@ -3,7 +3,6 @@
 .hero {
   display: flex;
   width: 100%;
-  min-height: 100vh;
   align-items: center;
   justify-content: center;
   padding: 5vh 5%;
