--- a/components/skills/index.module.scss
+++ b/components/skills/index.module.scss
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  min-height: 100vh;
   padding: 5vh 5%;
   max-width: 920px;
   position: relative;
